- Drawbridges will now figure out which way to open when created in their open-position (i.e. flat). Thanks, @BobbyMC for the report!
- Fixed portcullises showing incorrect open direction options in the GUI. Thanks, @SlimeDog for the report!
- Fixed drawbridges showing invalid open direction options in the GUI.

Alpha 0.1.8.16
- Updated to the latest version of XMaterial, which is supposed to bring some performance improvements in the areas concerning materials.
- Added beehive and bee nest to the material blacklist.
- Fixed bypass permission node for toggling doors not allowing people to toggle doors via commands if they did not own them. Thanks, @ReshiStar for the bug report.
- Added support for "Lands" (the land claim plugin). Thanks, @serhanekmekci for the request and @angeschossen for generously providing access to their plugin!
- Using negative speed values now results in an instant toggle (so no animations). Example: "/ToggleDoor 42 -1.0" to instantly toggle a door with ID 42. Thanks, @Keifranien for the suggestion!
- Updated the resource pack for version 1.15 of Minecraft. Additionally, the config now uses a boolean value instead of a URL. Thanks, @wjtonline for the report!
- Added BELL to the material blacklist by default to avoid duplication. Thanks, @Achaius for the report!
- Added whitelist option to the config to override the hardcoded blacklist (as well as the blacklist config option). Also sped up material blacklist checking a bit.

Alpha 0.1.8.15
- Added "/shadowtoggledoor <doorName/doorUID>" (permission: bigdoors.admin.shadowtoggledoor) command to toggle a door purely in the database (no blocks will be moved). This can be used to fix a desync issue. It should only be used as a last resort!
- Added support for 1.15.

Alpha 0.1.8.14
- Fixed materials in 1.12. Thanks, @GameFire99 for the bug report!
- Updated to JCalculator 1.6 (for the price formulas in the config), fixing issues with exponentiation and adding some more operators. 

Alpha 0.1.8.13