@@ -3,6 +3,7 @@ Alpha 0.1.8.17
 - Drawbridges will now figure out which way to open when created in their open-position (i.e. flat). Thanks, @BobbyMC for the report!
 - Fixed portcullises showing incorrect open direction options in the GUI. Thanks, @SlimeDog for the report!
 - Fixed drawbridges showing invalid open direction options in the GUI.
+- Added RedProtect support. Thanks, @Rebellion for the suggestion!
 
 Alpha 0.1.8.16
 - Updated to the latest version of XMaterial, which is supposed to bring some performance improvements in the areas concerning materials.
